// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`messages getSummaryMessages should detect duplicate uniqueId in batch 1`] = `
"6 transactions scraped from 1 account.
(0 pending, 6 completed)

<blockquote expandable>⚠️ Duplicate uniqueId detected (2 unique keys affected)
	2025-01-15_mizrahi_account1_-20_Duplicate transaction 1_memo1
	2025-01-15_mizrahi_account1_-50_Another duplicate_memo2</blockquote>

<blockquote expandable>Accounts updated
	✔️ [mizrahi] account1: 6</blockquote>"
`;

exports[`messages getSummaryMessages should not add empty groups 1`] = `
[
  "📝 Storage (TheTable)
	0 added
	took 0.00s
	-----
	Group2:
		description1:	+10.00",
]
`;

exports[`messages getSummaryMessages should not add empty groups 2`] = `
[
  "📝 Storage (TheTable)
	0 added
	took 0.00s",
]
`;

exports[`messages getSummaryMessages should return a summary message 1`] = `
"8 transactions scraped from 2 accounts.
(3 pending, 5 completed)
From completed, 3 not originally in ILS and 1 not charged in ILS

<blockquote expandable>⚠️ Duplicate uniqueId detected (1 unique keys affected)
	2026-01-30_max_account2_0_description1_undefined</blockquote>

<blockquote expandable>Accounts updated
	✔️ [max] account1: 1
	✔️ [max] account2: 7</blockquote>

<blockquote expandable>Pending txns
	description1:	+20.00
	description1:	+20.00 USD
	description1:	-20.00</blockquote>"
`;

exports[`messages getSummaryMessages should return a summary message 2`] = `
[
  "📝 Storage 1 (TheTable)
	1 added
	took 350.00s",
  "📝 Storage 2 (TheTable)
	7 added	3 skipped (3 pending)

	took 350.00s
	-----
	Group1:
		description1:	+10.00",
]
`;

exports[`messages getSummaryMessages should return a summary message with failed results 1`] = `
"1 transactions scraped from 1 account.
(0 pending, 1 completed)

<blockquote expandable>Failed Account Updates
	❌ [max] GENERIC
		Some error message
	❌ [hapoalim] CHANGE_PASSWORD</blockquote>

<blockquote expandable>Successful Account Updates
	✔️ [hapoalim] account1: 1</blockquote>"
`;

exports[`messages getSummaryMessages should return a summary message with failed results 2`] = `[]`;

exports[`messages getSummaryMessages should return a summary message with installments 1`] = `
"2 transactions scraped from 1 account.
(0 pending, 2 completed)

<blockquote expandable>Accounts updated
	✔️ [max] account1: 2</blockquote>"
`;

exports[`messages getSummaryMessages should return a summary message with installments 2`] = `
[
  "📝 Storage 1 (TheTable)
	2 added
	took 0.00s
	-----
	SomeGroup:
		should be +20:	+20.00
		should be -20:	-20.00",
]
`;

exports[`messages getSummaryMessages should return a summary message with no results 1`] = `
"0 transactions scraped.

Accounts updated:
	😶 None"
`;

exports[`messages getSummaryMessages should return a summary message with no results 2`] = `[]`;

exports[`messages getSummaryMessages should support stats with otherSkipped transactions 1`] = `
[
  "📝 Storage (TheTable)
	1 added	4 skipped (1 existing, 1 pending, 2 other)

	took 0.00s
	-----
	Group1:
		description1:	+10.00",
]
`;

exports[`messages getSummaryMessages should support stats with skipped transactions 1`] = `
[
  "📝 Storage (TheTable)
	1 added	2 skipped (1 existing, 1 pending)

	took 0.00s
	-----
	Group1:
		description1:	+10.00",
]
`;

exports[`messages getSummaryMessages should support steps 1`] = `
[
  "📝 Storage (TheTable)
	Step1, took 0.01s
	Step2, took 0.10s
	Step3, took 10.00s
	Step4, took 100.46s
	1 added
	took 0.00s
	-----
	Group1:
		description1:	+10.00",
]
`;

exports[`messages getSummaryMessages should use expandable block quotation for mixed success/error accounts (HTML) 1`] = `
"8 transactions scraped from 2 accounts.
(0 pending, 8 completed)

<blockquote expandable>⚠️ Duplicate uniqueId detected (2 unique keys affected)
	2026-01-30_hapoalim_12345_10_description1_undefined
	2026-01-30_hapoalim_67890_10_description1_undefined</blockquote>

<blockquote expandable>Failed Account Updates
	❌ [max] GENERIC
		Connection failed</blockquote>

<blockquote expandable>Successful Account Updates
	✔️ [hapoalim] 12345: 5
	✔️ [hapoalim] 67890: 3</blockquote>"
`;

exports[`messages getSummaryMessages should use expandable block quotation for successful accounts only (HTML) 1`] = `
"3 transactions scraped from 2 accounts.
(0 pending, 3 completed)

<blockquote expandable>⚠️ Duplicate uniqueId detected (1 unique keys affected)
	2026-01-30_max_account2_10_description1_undefined</blockquote>

<blockquote expandable>Accounts updated
	✔️ [max] account1: 1
	✔️ [max] account2: 2</blockquote>"
`;

exports[`messages saving should return a saving message 1`] = `"📝 Storage Saving..."`;

exports[`messages saving should return a saving message with not finished steps 1`] = `
"📝 Storage Saving...
	Step1, took 0.01s
	Step2, took 0.10s
	Step3, took 10.00s
	Step4"
`;

exports[`messages saving should return a saving message with one not finished step 1`] = `
"📝 Storage Saving...
	Step4"
`;

exports[`messages saving should return a saving message with steps 1`] = `
"📝 Storage Saving...
	Step1, took 0.01s
	Step2, took 0.10s
	Step3, took 10.00s
	Step4, took 100.46s"
`;
